Some CI surefire improvements